# movie-commentary

./: .env.example  .gitignore  README.md  pyproject.toml  scenes.csv
src/movie_commentary/: __init__.py  cli.py  compositor.py  critic.py  downloader.py  narrator.py  segmenter.py  transcriber.py
src/movie_critiques/: __init__.py  cli.py  compositor.py  critic.py
